Update submodule + fix yaml test (#604)

--- a/modules/serverless-enterprise-search/src/yamlRestTest/resources/rest-api-spec/test/enterprise_search_fast_refresh/10_basic.yml
+++ b/modules/serverless-enterprise-search/src/yamlRestTest/resources/rest-api-spec/test/enterprise_search_fast_refresh/10_basic.yml
@@ -30,7 +30,7 @@
               criteria:
                 - type: exact
                   metadata: query_string
-                  value: elastic
+                  values: [elastic]
               actions:
                 ids:
                   - 'id1'
