Fix Enterprise Search warning yaml (#657)
* fix warning yaml

* update submodule

* Empty commit to retrigger CI

--- a/modules/serverless-enterprise-search/src/yamlRestTest/resources/rest-api-spec/test/enterprise_search_fast_refresh/10_basic.yml
+++ b/modules/serverless-enterprise-search/src/yamlRestTest/resources/rest-api-spec/test/enterprise_search_fast_refresh/10_basic.yml
@@ -11,6 +11,11 @@
         name: test-search-application-1
         body:
           indices: [ "test-index1" ]
+          template:
+            script:
+              source:
+                query_string:
+                  query: "{{query_string}}"
 
   - do:
       indices.create:
