Port dev env buildkite pipelines to AWS (#589)
- Port e2e pipelines to aws
- Remove gke related code
- Move to api based authentication for e2e tests
- Encrypt sensible data passed down the pipeline via buildkite metadata

--- a/.buildkite/pipeline.create-gke-dev.yml
+++ b/.buildkite/pipeline.create-gke-dev.yml
@@ -1,21 +1,19 @@
 agents:
   provider: k8s
-  image: "docker.elastic.co/ci-agent-images/eck-region/buildkite-agent:1.4"
+  image: "docker.elastic.co/ci-agent-images/eck-region/buildkite-agent:1.5"
   memory: "4G"
 
 env:
   BUILDKITE_DIR: ".buildkite"
   CI_PIPELINE_ID: "${CI_PIPELINE_ID:-ess-dev-ci}"
-  GCLOUD_PROJECT: "${GCLOUD_PROJECT:-elastic-cloud-dev}"
-  GCLOUD_REGION: "${GCLOUD_REGION:-us-central1}"
-  GKE_CLUSTER_NAME: "${GKE_CLUSTER_NAME:-${CI_PIPELINE_ID}}"
-  GCLOUD_SERVICE_ACCOUNT_VAULT_PATH: "secret/ci/elastic-elasticsearch-serverless/gcloud-integtest-dev-sa"
+  CLUSTER_NAME: "${CLUSTER_NAME:-${CI_PIPELINE_ID}}"
+  AWS_CLUSTER_NAME: "${CLUSTER_NAME}"
+  AWS_REGION: "${AWS_REGION:-eu-west-1}"
   COSMOSDB_ACCOUNT_NAME: "${COSMOSDB_ACCOUNT_NAME:-serverless-${CI_PIPELINE_ID}}"
   ENV_UNIQUE_NAME: "${ENV_UNIQUE_NAME}"
   GITOPS_PR_COMMIT: ${GITOPS_PR_COMMIT:-HEAD}
   GITOPS_PR_BRANCH: ${GITOPS_PR_BRANCH:-main}
   USER: es-delivery
-
 steps:
   # Deploy CI dev env from the pipeline defined in the gitops repo (HEAD)
   - label: ":k8s: :argocd: Create CI dev environment & deploy services"
@@ -26,9 +24,8 @@ steps:
       commit: "${GITOPS_PR_COMMIT}"
       branch: "${GITOPS_PR_BRANCH}"
       env:
-        GCLOUD_PROJECT: "${GCLOUD_PROJECT}"
-        GCLOUD_REGION: "${GCLOUD_REGION}"
-        GKE_CLUSTER_NAME: "${GKE_CLUSTER_NAME}"
+        AWS_CLUSTER_NAME: "${AWS_CLUSTER_NAME}"
+        AWS_REGION: "${AWS_REGION}"
         COSMOSDB_ACCOUNT_NAME: "${COSMOSDB_ACCOUNT_NAME}"
         ENV_UNIQUE_NAME: "${ENV_UNIQUE_NAME}"
         USER: "${USER}"
