--- a/.buildkite/pipeline.delete-gke-dev.yml
+++ b/.buildkite/pipeline.delete-gke-dev.yml
@@ -1,18 +1,19 @@
 agents:
   provider: k8s
-  image: "docker.elastic.co/ci-agent-images/eck-region/buildkite-agent:1.4"
+  image: "docker.elastic.co/ci-agent-images/eck-region/buildkite-agent:1.5"
   memory: "4G"
 
 env:
   CI_PIPELINE_ID: "${CI_PIPELINE_ID:-ess-dev-ci}"
-  GCLOUD_PROJECT: "${GCLOUD_PROJECT:-elastic-cloud-dev}"
-  GCLOUD_REGION: "${GCLOUD_REGION:-us-central1}"
-  GKE_CLUSTER_NAME: "${GKE_CLUSTER_NAME:-${CI_PIPELINE_ID}}"
+  CLUSTER_NAME: "${CLUSTER_NAME:-${CI_PIPELINE_ID}}"
+  AWS_CLUSTER_NAME: "${CLUSTER_NAME}"
+  AWS_REGION: "${AWS_REGION:-eu-west-1}"
   COSMOSDB_ACCOUNT_NAME: "${COSMOSDB_ACCOUNT_NAME:-serverless-${CI_PIPELINE_ID}}"
   ENV_UNIQUE_NAME: "${ENV_UNIQUE_NAME}"
   GITOPS_PR_COMMIT: ${GITOPS_PR_COMMIT:-HEAD}
   GITOPS_PR_BRANCH: ${GITOPS_PR_BRANCH:-main}
   USER: es-delivery
+  DEV_ENV_CSP: "${DEV_ENV_CSP:-aws}"
 
 steps:
   # Delete CI dev env from the pipeline defined in the gitops repo (HEAD)
@@ -24,9 +25,9 @@ steps:
       commit: "${GITOPS_PR_COMMIT}"
       branch: "${GITOPS_PR_BRANCH}"
       env:
-        GCLOUD_PROJECT: "${GCLOUD_PROJECT}"
-        GCLOUD_REGION: "${GCLOUD_REGION}"
-        GKE_CLUSTER_NAME: "${GKE_CLUSTER_NAME}"
+        AWS_CLUSTER_NAME: "${AWS_CLUSTER_NAME}"
+        AWS_REGION: "${AWS_REGION}"
         COSMOSDB_ACCOUNT_NAME: "${COSMOSDB_ACCOUNT_NAME}"
         ENV_UNIQUE_NAME: "${ENV_UNIQUE_NAME}"
         USER: "${USER}"
+        DEV_ENV_CSP: "${DEV_ENV_CSP}"
