--- a/.buildkite/pipeline.update-dev.yml
+++ b/.buildkite/pipeline.update-dev.yml
@@ -1,20 +1,19 @@
 agents:
   provider: k8s
-  image: "docker.elastic.co/ci-agent-images/eck-region/buildkite-agent:1.4"
+  image: "docker.elastic.co/ci-agent-images/eck-region/buildkite-agent:1.5"
   memory: "4G"
 
 env:
   BUILDKITE_DIR: ".buildkite"
   PROJECT_ID: "${PROJECT_ID}"
+  ESS_API_KEY: "${ESS_API_KEY}"
   CI_PIPELINE_ID: "${CI_PIPELINE_ID:-ess-dev-ci}"
   DEPLOY_ID: "${CI_PIPELINE_ID}-git-${BUILDKITE_COMMIT:0:12}"
-  GCLOUD_PROJECT: "${GCLOUD_PROJECT:-elastic-cloud-dev}"
-  GCLOUD_REGION: "${GCLOUD_REGION:-us-central1}"
-  GCLOUD_SERVICE_ACCOUNT_VAULT_PATH: "secret/ci/elastic-elasticsearch-serverless/gcloud-integtest-dev-sa"
-  GKE_CLUSTER_NAME: "${GKE_CLUSTER_NAME:-${CI_PIPELINE_ID}}"
+  CLUSTER_NAME: "${CLUSTER_NAME:-${CI_PIPELINE_ID}}"
+  AWS_CLUSTER_NAME: "${CLUSTER_NAME}"
+  AWS_REGION: "${AWS_REGION:-eu-west-1}"
   INTEG_TEST_IMAGE: "docker.elastic.co/elasticsearch-ci/elasticsearch-serverless:${DEPLOY_ID}"
   VAULT_ADDR: "https://vault-ci-prod.elastic.dev"
-  DEPLOY_ARCH: "${DEPLOY_ARCH:-x86_64}"
 
 steps:
   - label: ":docker: Publish docker test images"
@@ -26,7 +25,6 @@ steps:
         branch: "${BUILDKITE_BRANCH}"
         env:
           DEPLOY_ID: "${DEPLOY_ID}"
-          DEPLOY_ARCH: "${DEPLOY_ARCH}"
 
   - wait: ~
   - label: ":k8s: Update elasticsearch stateless"
