--- a/.buildkite/pipeline.cleanup-gke-dev.yml
+++ b/.buildkite/pipeline.cleanup-gke-dev.yml
@@ -1,16 +1,14 @@
 agents:
   provider: k8s
-  image: "docker.elastic.co/ci-agent-images/eck-region/buildkite-agent:1.4"
+  image: "docker.elastic.co/ci-agent-images/eck-region/buildkite-agent:1.5"
   memory: "4G"
 
 env:
   MAX_DEPLOYMENT_AGE_IN_HOUR: "${MAX_DEPLOYMENT_AGE_IN_HOUR:-48}"
   BUILDKITE_DIR: ".buildkite"
   CI_PIPELINE_ID: "${CI_PIPELINE_ID:-ess-dev-ci}"
-  GCLOUD_PROJECT: "${GCLOUD_PROJECT:-elastic-cloud-dev}"
-  GCLOUD_REGION: "${GCLOUD_REGION:-us-central1}"
-  GCLOUD_SERVICE_ACCOUNT_VAULT_PATH: "secret/ci/elastic-elasticsearch-serverless/gcloud-integtest-dev-sa"
-  GKE_CLUSTER_NAME: "${GKE_CLUSTER_NAME:-${CI_PIPELINE_ID}}"
+  CLUSTER_NAME: "${CLUSTER_NAME:-${CI_PIPELINE_ID}}"
+  AWS_CLUSTER_NAME: "${CLUSTER_NAME}"
   VAULT_ADDR: "https://vault-ci-prod.elastic.dev"
 
 steps:
