Update synonyms test (#713)

--- a/modules/serverless-search/src/yamlRestTest/resources/rest-api-spec/test/search_fast_refresh/10_basic.yml
+++ b/modules/serverless-search/src/yamlRestTest/resources/rest-api-spec/test/search_fast_refresh/10_basic.yml
@@ -3,8 +3,8 @@
       features: ["allowed_warnings_regex"]
 
   - do:
-      synonyms.put:
-        synonyms_set: test-update-synonyms
+      synonyms.put_synonym:
+        id: test-update-synonyms
         body:
           synonyms_set:
             - synonyms: "hello, hi"
