--- a/.buildkite/pipeline.cleanup-k8s-dev.yml
+++ b/.buildkite/pipeline.cleanup-k8s-dev.yml
@@ -9,6 +9,7 @@ env:
   CI_PIPELINE_ID: "${CI_PIPELINE_ID:-ess-dev-ci}"
   CLUSTER_NAME: "${CLUSTER_NAME:-${CI_PIPELINE_ID}}"
   AWS_CLUSTER_NAME: "${CLUSTER_NAME}"
+  AWS_REGION: "${AWS_REGION:-eu-west-1}"
   VAULT_ADDR: "https://vault-ci-prod.elastic.dev"
 
 steps:
