--- a/.buildkite/pipeline.deploy-dev.yml
+++ b/.buildkite/pipeline.deploy-dev.yml
@@ -9,7 +9,7 @@ env:
   DEPLOY_ID: "${DEPLOY_ID:-${CI_PIPELINE_ID}-git-${BUILDKITE_COMMIT:0:12}}"
   CLUSTER_NAME: "${CLUSTER_NAME:-${CI_PIPELINE_ID}}"
   AWS_CLUSTER_NAME: "${CLUSTER_NAME}"
-  AWS_REGION: "${AWS_REGION:-eu-west-1}" 
+  AWS_REGION: "${AWS_REGION:-eu-west-1}"
   INTEG_TEST_IMAGE: "docker.elastic.co/elasticsearch-ci/elasticsearch-serverless:${DEPLOY_ID}"
   VAULT_ADDR: "https://vault-ci-prod.elastic.dev"
 
@@ -25,5 +25,5 @@ steps:
           DEPLOY_ID: "${DEPLOY_ID}"
 
   - wait: ~
-  - label: ":k8s: deploy elasticsearch stateless"
+  - label: ":k8s: Deploy serverless Elasticsearch"
     command: "$$BUILDKITE_DIR/scripts/deploy-ess.sh"
