--- a/.buildkite/pipeline.e2e-tests.yml
+++ b/.buildkite/pipeline.e2e-tests.yml
@@ -18,7 +18,7 @@ steps:
     command:
       "buildkite-agent pipeline upload .buildkite/pipeline.create--dev.yml"
 
-  - label: ":k8s: Deploy elasticsearch snapshot in E2E environment"
+  - label: ":pipeline::arrow_up: Trigger deploy to development cluster"
     key: deploy-ess
     command:
         "buildkite-agent pipeline upload .buildkite/pipeline.deploy-dev.yml"
@@ -36,7 +36,7 @@ steps:
     depends_on:
       - step: deploy-ess
 
-  - label: ":k8s: Undeploy elasticsearch snapshot in E2E environment"
+  - label: ":pipeline::arrow_up: Trigger undeploy from development cluster"
     key: undeploy-ess
     command:
       "buildkite-agent pipeline upload .buildkite/pipeline.undeploy-dev.yml"
