--- a/modules/serverless-api-filtering/src/yamlRestTest/resources/rest-api-spec/test/20_public_settings_validation.yml
+++ b/modules/serverless-api-filtering/src/yamlRestTest/resources/rest-api-spec/test/20_public_settings_validation.yml
@@ -10,7 +10,7 @@
             index.number_of_replicas: "0"
   - match: { status: 400 }
   - match: { error.root_cause.0.type: "illegal_argument_exception" }
-  - match: { error.root_cause.0.reason: "unknown setting [index.number_of_replicas] within non-operator mode" }
+  - match: { error.root_cause.0.reason: "Settings [index.number_of_replicas] are not available when running in serverless mode" }
 
 
 ---
@@ -27,7 +27,7 @@
 
   - match: { status: 400 }
   - match: { error.root_cause.0.type: "illegal_argument_exception" }
-  - match: { error.root_cause.0.reason: "unknown setting [index.number_of_replicas] within non-operator mode" }
+  - match: { error.root_cause.0.reason: "Settings [index.number_of_replicas] are not available when running in serverless mode" }
 
 ---
 "Create composable index template with settings":
@@ -44,4 +44,4 @@
 
   - match: { status: 400 }
   - match: { error.root_cause.0.type: "illegal_argument_exception" }
-  - match: { error.root_cause.0.reason: "unknown setting [index.number_of_replicas] within non-operator mode" }
+  - match: { error.root_cause.0.reason: "Settings [index.number_of_replicas] are not available when running in serverless mode" }
