--- a/modules/serverless-api-filtering/src/yamlRestTest/resources/rest-api-spec/test/50_public_settings_filtering_on_composable_index_template.yml
+++ b/modules/serverless-api-filtering/src/yamlRestTest/resources/rest-api-spec/test/50_public_settings_filtering_on_composable_index_template.yml
@@ -17,13 +17,13 @@
               index.query_string.lenient: "true"
 
 
-# create index using a template
+# create index using a template as a non-operator
   - do:
-      headers: { Authorization: "Basic eF9wYWNrX3Jlc3RfdXNlcjp4LXBhY2stdGVzdC1wYXNzd29yZA==" } # x_pack_rest_user, an operator
       indices.create:
         index: test_index
   - match: {acknowledged: true}
 
+# a non-public setting is set on the index created by non-operator matching a component template created by operator
   - do:
       headers: { Authorization: "Basic eF9wYWNrX3Jlc3RfdXNlcjp4LXBhY2stdGVzdC1wYXNzd29yZA==" } # x_pack_rest_user, an operator
       indices.get_settings:
@@ -33,6 +33,7 @@
   - match: { test_index.settings.index.query_string.lenient: "true" }
   - match: { test_index.settings.index.number_of_replicas: "0"}
 
+#a non operator does not see a non-public setting
   - do:
       indices.get_settings:
         index: test_index
