--- a/.buildkite/pipeline.deploy-dev.yml
+++ b/.buildkite/pipeline.deploy-dev.yml
@@ -10,7 +10,7 @@ env:
   CLUSTER_NAME: "${CLUSTER_NAME:-${CI_PIPELINE_ID}}"
   AWS_CLUSTER_NAME: "${CLUSTER_NAME}"
   AWS_REGION: "${AWS_REGION:-eu-west-1}"
-  INTEG_TEST_IMAGE: "docker.elastic.co/elasticsearch-ci/elasticsearch-serverless:${DEPLOY_ID}"
+  IMAGE_OVERRIDE: "docker.elastic.co/elasticsearch-ci/elasticsearch-serverless:${DEPLOY_ID}"
   VAULT_ADDR: "https://vault-ci-prod.elastic.dev"
 
 steps:
@@ -26,4 +26,4 @@ steps:
 
   - wait: ~
   - label: ":k8s: Deploy serverless Elasticsearch"
-    command: "$$BUILDKITE_DIR/scripts/deploy-ess.sh"
+    command: "$$BUILDKITE_DIR/scripts/deploy-dev.sh"
