--- a/.buildkite/pipeline.undeploy-dev.yml
+++ b/.buildkite/pipeline.undeploy-dev.yml
@@ -6,13 +6,13 @@ agents:
 env:
   BUILDKITE_DIR: ".buildkite"
   CI_PIPELINE_ID: "${CI_PIPELINE_ID:-ess-dev-ci}"
-  DEPLOY_ID: "${DEPLOY_ID:-${CI_PIPELINE_ID}-git-${BUILDKITE_COMMIT:0:12}}"
+  DEPLOY_ID: "${DEPLOY_ID:-ess-e2e-ci-git-${BUILDKITE_COMMIT:0:12}}"
   CLUSTER_NAME: "${CLUSTER_NAME:-${CI_PIPELINE_ID}}"
   AWS_CLUSTER_NAME: "${CLUSTER_NAME}"
   AWS_REGION: "${AWS_REGION:-eu-west-1}"
-  INTEG_TEST_IMAGE: "docker.elastic.co/elasticsearch-ci/elasticsearch-serverless:${DEPLOY_ID}"
+  IMAGE_OVERRIDE: "docker.elastic.co/elasticsearch-ci/elasticsearch-serverless:${DEPLOY_ID}"
   VAULT_ADDR: "https://vault-ci-prod.elastic.dev"
 
 steps:
   - label: ":k8s: Undeploy serverless Elasticsearch"
-    command: "$$BUILDKITE_DIR/scripts/undeploy-ess.sh"
+    command: "$$BUILDKITE_DIR/scripts/undeploy-dev.sh"
