--- a/.buildkite/pipeline.update-dev.yml
+++ b/.buildkite/pipeline.update-dev.yml
@@ -12,7 +12,7 @@ env:
   CLUSTER_NAME: "${CLUSTER_NAME:-${CI_PIPELINE_ID}}"
   AWS_CLUSTER_NAME: "${CLUSTER_NAME}"
   AWS_REGION: "${AWS_REGION:-eu-west-1}"
-  INTEG_TEST_IMAGE: "docker.elastic.co/elasticsearch-ci/elasticsearch-serverless:${DEPLOY_ID}"
+  IMAGE_OVERRIDE: "docker.elastic.co/elasticsearch-ci/elasticsearch-serverless:${DEPLOY_ID}"
   VAULT_ADDR: "https://vault-ci-prod.elastic.dev"
 
 steps:
