--- a/.buildkite/pipeline.intake.yml
+++ b/.buildkite/pipeline.intake.yml
@@ -36,7 +36,7 @@ steps:
     branches: main
     build:
       env:
-        REMOTE_SERVICE_CONFIG: https://raw.githubusercontent.com/elastic/serverless-gitops/main/gen/gpctl/elasticsearch/config.yaml
+        REMOTE_SERVICE_CONFIG: https://raw.githubusercontent.com/elastic/elasticsearch-serverless/main/.buildkite/gpctl/dev-config.yaml
         SERVICE_COMMIT_HASH: $BUILDKITE_COMMIT
 
   - label: ":git: Push promoted build tags"
