Separate DEPLOY_ID from IMAGE_TAG (#800)
By separating these two variables we can reuse the same published
Docker image across multiple deployments. It's not necessary to
rebuild and publish the docker image if just the deployment environment
is changing.

--- a/.buildkite/pipeline.e2e-tests-dev.yml
+++ b/.buildkite/pipeline.e2e-tests-dev.yml
@@ -7,7 +7,8 @@ env:
   DEFAULT_CLUSTER_ID: "ess-dev-ci"
   CI_PIPELINE_ID: "${CI_PIPELINE_ID:-${DEFAULT_CLUSTER_ID}}"
   BUILDKITE_DIR: ".buildkite"
-  DEPLOY_ID: "${DEPLOY_ID:-ess-e2e-ci-git-${BUILDKITE_COMMIT:0:12}}"
+  IMAGE_TAG: "git-${BUILDKITE_COMMIT:0:12}"
+  DEPLOY_ID: "${DEPLOY_ID:-ess-e2e-ci-${IMAGE_TAG}}"
   CLUSTER_NAME: "${CLUSTER_NAME:-${CI_PIPELINE_ID}}"
   AWS_CLUSTER_NAME: "${CLUSTER_NAME}"
 
