--- a/.buildkite/pipeline.deploy-dev.yml
+++ b/.buildkite/pipeline.deploy-dev.yml
@@ -6,11 +6,12 @@ agents:
 env:
   BUILDKITE_DIR: ".buildkite"
   CI_PIPELINE_ID: "${CI_PIPELINE_ID:-ess-dev-ci}"
-  DEPLOY_ID: "${DEPLOY_ID:-${CI_PIPELINE_ID}-git-${BUILDKITE_COMMIT:0:12}}"
+  IMAGE_TAG: "git-${BUILDKITE_COMMIT:0:12}"
+  DEPLOY_ID: "${DEPLOY_ID:-${CI_PIPELINE_ID}-${IMAGE_TAG}}"
   CLUSTER_NAME: "${CLUSTER_NAME:-${CI_PIPELINE_ID}}"
   AWS_CLUSTER_NAME: "${CLUSTER_NAME}"
   AWS_REGION: "${AWS_REGION:-eu-west-1}"
-  IMAGE_OVERRIDE: "docker.elastic.co/elasticsearch-ci/elasticsearch-serverless:${DEPLOY_ID}"
+  IMAGE_OVERRIDE: "docker.elastic.co/elasticsearch-ci/elasticsearch-serverless:${IMAGE_TAG}"
   VAULT_ADDR: "https://vault-ci-prod.elastic.dev"
 
 steps:
@@ -22,7 +23,7 @@ steps:
         commit: "${BUILDKITE_COMMIT}"
         branch: "${BUILDKITE_BRANCH}"
         env:
-          DEPLOY_ID: "${DEPLOY_ID}"
+          IMAGE_TAG: "${IMAGE_TAG}"
 
   - wait: ~
   - label: ":k8s: Deploy serverless Elasticsearch"
