--- a/.buildkite/pipeline.e2e-tests-qa.yml
+++ b/.buildkite/pipeline.e2e-tests-qa.yml
@@ -5,12 +5,13 @@ agents:
 
 env:
   BUILDKITE_DIR: ".buildkite"
-  DEPLOY_ID: "${DEPLOY_ID:-ess-e2e-ci-git-${BUILDKITE_COMMIT:0:12}}"
+  IMAGE_TAG: "git-${BUILDKITE_COMMIT:0:12}"
+  DEPLOY_ID: "${DEPLOY_ID:-ess-e2e-ci-${IMAGE_+TAG}}"
   VAULT_PATH_API_KEY: "secret/ci/elastic-elasticsearch-serverless/ess-delivery-ci-qa-creds"
   ENV_URL: "https://global.qa.cld.elstc.co"
   AWS_REGION: "aws-eu-west-1"
   TEST_ENV: "qa"
-  IMAGE_OVERRIDE: "${IMAGE_OVERRIDE-docker.elastic.co/elasticsearch-ci/elasticsearch-serverless:${DEPLOY_ID}}"
+  IMAGE_OVERRIDE: "${IMAGE_OVERRIDE-docker.elastic.co/elasticsearch-ci/elasticsearch-serverless:${IMAGE_TAG}}"
 
 steps:
   - label: ":pipeline::arrow_up: E2E tests in ${TEST_ENV}"
