--- a/.buildkite/pipeline.undeploy-dev.yml
+++ b/.buildkite/pipeline.undeploy-dev.yml
@@ -6,11 +6,12 @@ agents:
 env:
   BUILDKITE_DIR: ".buildkite"
   CI_PIPELINE_ID: "${CI_PIPELINE_ID:-ess-dev-ci}"
-  DEPLOY_ID: "${DEPLOY_ID:-ess-e2e-ci-git-${BUILDKITE_COMMIT:0:12}}"
+  IMAGE_TAG: "git-${BUILDKITE_COMMIT:0:12}"
+  DEPLOY_ID: "${DEPLOY_ID:-ess-e2e-ci-${IMAGE_TAG}}"
   CLUSTER_NAME: "${CLUSTER_NAME:-${CI_PIPELINE_ID}}"
   AWS_CLUSTER_NAME: "${CLUSTER_NAME}"
   AWS_REGION: "${AWS_REGION:-eu-west-1}"
-  IMAGE_OVERRIDE: "docker.elastic.co/elasticsearch-ci/elasticsearch-serverless:${DEPLOY_ID}"
+  IMAGE_OVERRIDE: "docker.elastic.co/elasticsearch-ci/elasticsearch-serverless:${IMAGE_TAG}"
   VAULT_ADDR: "https://vault-ci-prod.elastic.dev"
 
 steps:
