--- a/.buildkite/pipeline.update-dev.yml
+++ b/.buildkite/pipeline.update-dev.yml
@@ -8,11 +8,12 @@ env:
   PROJECT_ID: "${PROJECT_ID}"
   ESS_API_KEY: "${ESS_API_KEY}"
   CI_PIPELINE_ID: "${CI_PIPELINE_ID:-ess-dev-ci}"
-  DEPLOY_ID: "${CI_PIPELINE_ID}-git-${BUILDKITE_COMMIT:0:12}"
+  IMAGE_TAG: "git-${BUILDKITE_COMMIT:0:12}"
+  DEPLOY_ID: "${CI_PIPELINE_ID}-${IMAGE_TAG}"
   CLUSTER_NAME: "${CLUSTER_NAME:-${CI_PIPELINE_ID}}"
   AWS_CLUSTER_NAME: "${CLUSTER_NAME}"
   AWS_REGION: "${AWS_REGION:-eu-west-1}"
-  IMAGE_OVERRIDE: "docker.elastic.co/elasticsearch-ci/elasticsearch-serverless:${DEPLOY_ID}"
+  IMAGE_OVERRIDE: "docker.elastic.co/elasticsearch-ci/elasticsearch-serverless:${IMAGE_TAG}"
   VAULT_ADDR: "https://vault-ci-prod.elastic.dev"
 
 steps:
