--- a/.buildkite/pipeline.e2e-tests-dev.yml
+++ b/.buildkite/pipeline.e2e-tests-dev.yml
@@ -17,7 +17,7 @@ steps:
     key: create-k8s-cluster
     if: build.env('CI_PIPELINE_ID') != build.env('DEFAULT_CLUSTER_ID')
     command:
-      "buildkite-agent pipeline upload .buildkite/pipeline.create--dev.yml"
+      "buildkite-agent pipeline upload .buildkite/pipeline.create-k8s-dev.yml"
 
   - label: ":pipeline::arrow_up: Trigger deploy to development cluster"
     key: deploy-ess
