--- a/.buildkite/quality-gates/pipeline.tests-qa.yaml
+++ b/.buildkite/quality-gates/pipeline.tests-qa.yaml
@@ -3,32 +3,11 @@
 # this pipeline build will prevent further progression to the subsequent stage.
 
 steps:
-  - label: ":pipeline::kibana::seedling: Trigger Elasticsearch Tests for ${ENVIRONMENT}"
-    command: echo "replace me with Elasticsearch specific tests"
-    agent:
-      image: "docker.elastic.co/ci-agent-images/basic-buildkite-agent:1688566364"
-
-  - label: ":pipeline::kibana::seedling: Trigger Elasticsearch Tests for ${ENVIRONMENT}"
-    command: echo "replace me with Enterprise Search specific tests"
-    agent:
-      image: "docker.elastic.co/ci-agent-images/basic-buildkite-agent:1688566364"
-
-  - label: ":pipeline::kibana::seedling: Trigger Observability Elasticsearch Tests for ${ENVIRONMENT}"
-    command: echo "replace me with Observability specific tests"
-    agent:
-      image: "docker.elastic.co/ci-agent-images/basic-buildkite-agent:1688566364"
-
-  - label: ":pipeline::fleet::seedling: Trigger Fleet Elasticsearch Tests for ${ENVIRONMENT}"
-    command: echo "replace me with Fleet specific Elasticsearch tests"
-    agent:
-      image: "docker.elastic.co/ci-agent-images/basic-buildkite-agent:1688566364"
-
-  - label: ":pipeline::lock::seedling: Trigger Security Elasticsearch Tests for ${ENVIRONMENT}"
-    command: echo "replace me with Security specific Elasticsearch tests"
-    agent:
-      image: "docker.elastic.co/ci-agent-images/basic-buildkite-agent:1688566364"
-
-  - label: ":pipeline::lock::seedling: Trigger Control Plane Elasticsearch Tests for ${ENVIRONMENT}"
-    command: echo "replace me with Security specific Elasticsearch tests"
-    agent:
-      image: "docker.elastic.co/ci-agent-images/basic-buildkite-agent:1688566364"
+  - label: ":pipeline: Trigger Elasticsearch E2E tests in QA"
+    trigger: elasticsearch-serverless-e2e-tests-qa
+    build:
+      message: "${BUILDKITE_MESSAGE}"
+      commit: "${BUILDKITE_COMMIT}"
+      branch: "${BUILDKITE_BRANCH}"
+      env:
+        IMAGE_OVERRIDE: ""
