--- a/.buildkite/quality-gates/pipeline.tests-staging.yaml
+++ b/.buildkite/quality-gates/pipeline.tests-staging.yaml
@@ -3,12 +3,9 @@
 # this pipeline build will prevent further progression to the subsequent stage.
 
 steps:
-  - label: ":pipeline::kibana::seedling: Trigger Elasticsearch Tests for ${ENVIRONMENT}"
-    command: echo "replace me with Elasticsearch specific tests"
-    agent:
-      image: "docker.elastic.co/ci-agent-images/basic-buildkite-agent:1688566364"
-
-  - label: ":pipeline::kibana::seedling: Trigger Elasticsearch Tests for ${ENVIRONMENT}"
-    command: echo "replace me with Enterprise Search specific tests"
-    agent:
-      image: "docker.elastic.co/ci-agent-images/basic-buildkite-agent:1688566364"
+  - label: ":pipeline: Trigger Elasticsearch E2E tests in Staging"
+    trigger: elasticsearch-serverless-e2e-tests-staging
+    build:
+      message: "${BUILDKITE_MESSAGE}"
+      commit: "${BUILDKITE_COMMIT}"
+      branch: "${BUILDKITE_BRANCH}"
