--- a/.buildkite/pipeline.e2e-tests-managed.yml
+++ b/.buildkite/pipeline.e2e-tests-managed.yml
@@ -12,11 +12,12 @@ env:
   AWS_REGION: "${AWS_REGION}"
   TEST_ENV: "${TEST_ENV}"
   IMAGE_OVERRIDE: "${IMAGE_OVERRIDE}"
+  SKIP_DOCKER: "${SKIP_DOCKER:-false}"
 
 steps:
   - label: ":docker: Publish docker test images"
     trigger: elasticsearch-serverless-publish-docker
-    if: build.env('IMAGE_OVERRIDE') != ""
+    if: build.env('IMAGE_OVERRIDE') != "" && build.env('SKIP_DOCKER') != "true"
     key: docker-publish
     build:
       message: "${BUILDKITE_MESSAGE}"
