Move project id setting to serverless shared module (#816)
The project id is useful for diagnostic reporting outside of metering.
This commit moves the setting into the serverless shared settings. It
also adds slightly different prefix to the setting that is not specific
to metering. This will be followed up by changing the ES controller to
use the new setting name, and then removing the bwc setting in the
metering namespace.

--- a/modules/serverless-rest-root/src/yamlRestTest/resources/rest-api-spec/test/restroot/10_info.yml
+++ b/modules/serverless-rest-root/src/yamlRestTest/resources/rest-api-spec/test/restroot/10_info.yml
@@ -2,7 +2,7 @@
 "Info":
   - do:       { info: {} }
   - match:    { name: serverless }
-  - match:    { cluster_name: serverless }
+  - match:    { cluster_name: dummy-project-id }
   - match:    { version.number: "8.11.0" }
   - match:    { version.build_flavor: serverless }
   - match:    { version.build_type: docker }
