Set submodule branch to main (#833)
This commit tweaks the git submodule configuration so that the submodule
is specifically tracking main. By specifying the branch, branch and
remote configuration within the submodule is respected.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "elasticsearch"]
-	path = elasticsearch
-	url = git@github.com:elastic/elasticsearch.git
+  path = elasticsearch
+  url = git@github.com:elastic/elasticsearch.git
+  branch = main
