--- a/.buildkite/quality-gates/pipeline.quality-gates.yaml
+++ b/.buildkite/quality-gates/pipeline.quality-gates.yaml
@@ -12,6 +12,7 @@
 
 env:
   ENVIRONMENT: ${ENVIRONMENT?}
+  TEAM_CHANNEL: "#es-serverless-gitops"
 
 steps:
   - label: ":pipeline::grey_question::seedling: Trigger Elasticsearch Tests for ${ENVIRONMENT}"
@@ -20,3 +21,7 @@ steps:
     command: "make -C /agent run-environment-tests"
     agents:
       image: "docker.elastic.co/ci-agent-images/quality-gate-seedling:0.0.2"
+
+notify:
+  - slack: "${TEAM_CHANNEL?}"
+    if: build.branch == "main" && build.state == "failed"
